--- a/ecoplastol/frmMain.xaml
+++ b/ecoplastol/frmMain.xaml
@@ -24,11 +24,10 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
-        <Button Grid.Row="1" Grid.Column="1" Name="btnParametry" Content="PARAMETRY stare" HorizontalContentAlignment="Left" Padding="10,0,0,0" Margin="0,5,0,5" FontSize="24" Click="btnParametry_Click"/>
-        <Button Grid.Row="2" Grid.Column="1" Name="btnWyroby" Content="WYROBY stare" HorizontalContentAlignment="Left" Click="btnWyroby_Click" Padding="10,0,0,0" Margin="0,5,0,5" FontSize="24"/>
-        <Button Grid.Row="3" Grid.Column="1" Name="btnPlanowanie2" Content="PLANOWANIE" FontSize="22" HorizontalContentAlignment="Left" Padding="10,0,0,0" Margin="0,5,0,5" Click="BtnPlanowanie2_Click" />
-        <Button Grid.Row="4" Grid.Column="1" Name="btnZlecenia" Content="ZLECENIA" HorizontalContentAlignment="Left" FontSize="22" Padding="10,0,0,0" Margin="0,5,0,5" Click="BtnZlecenia_Click" />
-        <Button Grid.Row="5" Grid.Column="1" Name="btnKonfiguracja" Content="KONFIGURACJA" HorizontalContentAlignment="Left" FontSize="22" Padding="10,0,0,0" Margin="0,5,0,5" Click="btnKonfiguracja_Click" />
+        <Button Grid.Row="1" Grid.Column="1" Name="btnPlanowanie2" Content="PLANOWANIE" FontSize="22" HorizontalContentAlignment="Left" Padding="10,0,0,0" Margin="0,5,0,5" Click="BtnPlanowanie2_Click" />
+        <Button Grid.Row="2" Grid.Column="1" Name="btnZlecenia" Content="ZLECENIA" HorizontalContentAlignment="Left" FontSize="22" Padding="10,0,0,0" Margin="0,5,0,5" Click="BtnZlecenia_Click" />
+        <Button Grid.Row="3" Grid.Column="1" Name="btnKonfiguracja" Content="KONFIGURACJA" HorizontalContentAlignment="Left" FontSize="22" Padding="10,0,0,0" Margin="0,5,0,5" Click="btnKonfiguracja_Click" />
+        <Button Grid.Row="5" Grid.Column="1" Name="btnTools" Content="tools" HorizontalContentAlignment="Left" FontSize="22" Padding="10,0,0,0" Margin="0,5,0,5" Click="btnTools_Click" />
         <Button Grid.Row="100" Grid.Column="0" Grid.ColumnSpan="3" FontSize="20" Name="btnZamknij" Content="Z A M K N I J" Click="BtnZamknij_Click"/>
     </Grid>
 </Window>
