--- a/ecoplastol/App.xaml
+++ b/ecoplastol/App.xaml
@@ -4,6 +4,36 @@
              xmlns:local="clr-namespace:ecoplastol"
              StartupUri="frmLogin.xaml">
     <Application.Resources>
-         
+        <Style TargetType="Button" x:Key="btnGradientOrange">
+            <Setter Property="Background">
+                <Setter.Value>
+                    <LinearGradientBrush StartPoint="1,0" EndPoint="1,1">
+                        <GradientStop Color="Orange" Offset="1"/>
+                        <GradientStop Color="White" Offset="0.01"/>
+                    </LinearGradientBrush>
+                </Setter.Value>
+            </Setter>
+        </Style>
+        <Style TargetType="Button" x:Key="btnGradientLightGreen">
+            <Setter Property="Background">
+                <Setter.Value>
+                    <LinearGradientBrush StartPoint="1,0" EndPoint="1,1">
+                        <!--<GradientStop Color="LightGreen" Offset="1"/>-->
+                        <GradientStop Color="#FFBFEDBF" Offset="1"/>
+                        <GradientStop Color="White" Offset="0.01"/>
+                    </LinearGradientBrush>
+                </Setter.Value>
+            </Setter>
+        </Style>
+        <Style TargetType="Button" x:Key="btnGradientRed">
+            <Setter Property="Background">
+                <Setter.Value>
+                    <LinearGradientBrush StartPoint="1,0" EndPoint="1,1">
+                        <GradientStop Color="#FFFFCFCF" Offset="1"/>
+                        <GradientStop Color="White" Offset="0.01"/>
+                    </LinearGradientBrush>
+                </Setter.Value>
+            </Setter>
+        </Style>
     </Application.Resources>
 </Application>
