--- a/ecoplastol/konfiguracja/produkcja/PanelProdWyroby.xaml
+++ b/ecoplastol/konfiguracja/produkcja/PanelProdWyroby.xaml
@@ -12,37 +12,6 @@
         <ResourceDictionary>
                 <globals:BackgroundColor x:Key="valueToBackground"/>
                 <globals:RezystancjaConverter x:Key="rezConverter"/>
-            
-            <Style TargetType="Button" x:Key="btnGradientOrange">
-                <Setter Property="Background">
-                    <Setter.Value>
-                        <LinearGradientBrush StartPoint="1,0" EndPoint="1,1">
-                            <GradientStop Color="Orange" Offset="1"/>
-                            <GradientStop Color="White" Offset="0.01"/>
-                        </LinearGradientBrush>
-                    </Setter.Value>
-                </Setter>
-            </Style>
-            <Style TargetType="Button" x:Key="btnGradientLightGreen">
-                <Setter Property="Background">
-                    <Setter.Value>
-                        <LinearGradientBrush StartPoint="1,0" EndPoint="1,1">
-                            <GradientStop Color="LightGreen" Offset="1"/>
-                            <GradientStop Color="White" Offset="0.01"/>
-                        </LinearGradientBrush>
-                    </Setter.Value>
-                </Setter>
-            </Style>
-            <Style TargetType="Button" x:Key="btnGradientRed">
-                <Setter Property="Background">
-                    <Setter.Value>
-                        <LinearGradientBrush StartPoint="1,0" EndPoint="1,1">
-                            <GradientStop Color="#FFFF8D8D" Offset="1"/>
-                            <GradientStop Color="White" Offset="0.01"/>
-                        </LinearGradientBrush>
-                    </Setter.Value>
-                </Setter>
-            </Style>
         </ResourceDictionary>
     </UserControl.Resources>
     <Grid Background="White">
@@ -971,6 +940,7 @@
             <Button FontSize="16" Style="{StaticResource btnGradientRed}" Width="120" Name="btnUsun" Content="USUŃ" Click="BtnUsun_Click"/>
             <Button FontSize="16" Style="{StaticResource btnGradientRed}" Width="120" Name="btnAnuluj" Content="ANULUJ" Click="BtnAnuluj_Click" />
             <Button FontSize="16" Style="{StaticResource btnGradientLightGreen}" Width="120" Name="btnZatwierdz" Content="ZATWIERDŹ" Click="BtnZatwierdz_Click" Height="30" VerticalAlignment="Bottom" />
+            <Button FontSize="16" Width="200" Name="btnKartaTechn" Content="KARTA TECHNOLOGICZNA" Click="btnKartaTechn_Click" Height="30" VerticalAlignment="Bottom" />
         </StackPanel>
     </Grid>
 </UserControl>
