--- a/ecoplastol/frmUzytkownicy.xaml
+++ b/ecoplastol/frmUzytkownicy.xaml
@@ -7,6 +7,12 @@
         mc:Ignorable="d"
         Title="frmUzytkownicy" Height="450" Width="800">
     <Grid>
-
+        <Grid.RowDefinitions>
+            <RowDefinition Height="100"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="50"/>
+            
+            
+        </Grid.RowDefinitions>
     </Grid>
 </Window>
